--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Consulta de Veículos</title>
   <style>
+    /* ======= MARCA D'ÁGUA EM PADRÃO ======= */
+.watermark-pattern {
+  position: fixed;
+  inset: 0;
+  background-image: url("PR23.png");
+  background-repeat: repeat;
+  background-size: 280px; /* tamanho base da logo */
+  opacity: 0.6; /* 60% de transparência */
+  pointer-events: none;
+  z-index: 0;
+
+  /* deixa a imagem monocromática */
+  filter: grayscale(100%) brightness(250%) contrast(0%);
+  
+  /* fica atrás de tudo */
+  mix-blend-mode: lighten;
+}
+
+/* tamanhos variados no pattern */
+@media (min-width: 600px) {
+  .watermark-pattern {
+    background-size: 220px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .watermark-pattern {
+    background-size: 300px;
+  }
+}
+
     /* ======= ESTILO GERAL ======= */
     body {
       font-family: "Segoe UI", Arial, sans-serif;
@@ -191,6 +222,8 @@
 </head>
 
 <body>
+  <div class="watermark-pattern"></div>
+  
   <header>
     <img src="PR23.png" alt="Logomarca" />
   </header>
