--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@ function compartilharWhatsApp(item) {
   const icone = tipo === "carro" ? "🚗" : tipo === "moto" ? "🏍️" : "";
 
   // URLs das imagens para cada tipo
-  const imgCarro = "https://seusite.com/imagens/carro.png"; // 🔁 coloque sua URL aqui
-  const imgMoto  = "https://seusite.com/imagens/moto.png";  // 🔁 coloque sua URL aqui
+  const imgCarro = "https://raw.githubusercontent.com/sobralfelhipek/consultaprot/refs/heads/main/PRCARRO.jpg"; // 🔁 coloque sua URL aqui para a imagem do Carro
+  const imgMoto  = "https://raw.githubusercontent.com/sobralfelhipek/consultaprot/refs/heads/main/PRMOTO.jpg";  // 🔁 coloque sua URL aqui para a imagem da MOTO
 
   // Gera data/hora atual
   const agora = new Date();
